tests/baselines/reference/bigint-numeric-separator-literal-bil-nsl-bd-dunder-err.errors.txt
bigint-numeric-separator-literal-bil-nsl-bd-dunder-err.ts(43,5): error TS6189: Multiple consecutive numeric separators are not permitted.


==== bigint-numeric-separator-literal-bil-nsl-bd-dunder-err.ts (1 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear adjacent to another
      NumericLiteralSeparator in a BinaryIntegerLiteral
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      BinaryIntegerLiteral ::
        0b BinaryDigits
        0B BinaryDigits
    
      BinaryDigits ::
        BinaryDigit
        BinaryDigits BinaryDigit
        BinaryDigits NumericLiteralSeparator BinaryDigit
    
      BinaryDigit :: one of
        0 1
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    0b0__0n;
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    